--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,39 +1,43 @@
 name: template
 description: A new Flutter project.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  get: 3.26.0
+  flutter_svg: ^0.21.0-nullsafety.0
+  cached_network_image: ^3.0.0-nullsafety
+  dartz: 0.9.2
+  logger: 1.0.0
+  google_fonts: 2.0.0
+  get: ^4.0.0-nullsafety.2
 
-  datetime_picker_formfield: ^1.0.0
-  intl: ^0.16.1
-  flutter_screenutil: ^4.0.3+1
-  flutter_svg: ^0.19.0
-  google_fonts: ^1.1.2
-  get_storage: ^1.4.0
-  dio: ^3.0.10
-  image_picker: ^0.6.7+22
-  pin_code_fields: ^6.1.0
+  datetime_picker_formfield: ^2.0.0
+  intl: ^0.17.0
+  flutter_screenutil: ^5.0.0-nullsafety.11
+  # flutter_svg: ^0.19.0
+  # google_fonts: ^1.1.2
+  get_storage: ^2.0.1
+  # dio: ^3.0.10
+  image_picker: ^0.7.3
+  pin_code_fields: ^7.0.0
+  image_cropper: ^1.4.0
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.0
+  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
 flutter:
-
   uses-material-design: true
 
   assets:
     - assets/locale/
   #   - images/a_dot_ham.jpeg
-
   # fonts:
   #   - family: Schyler
   #     fonts:
